reduce svg on small sizes, prevent app for crash and instead show api error output (if any)

--- a/src/App.css
+++ b/src/App.css
@@ -643,3 +643,21 @@ pre tt:after {
 .ip:hover {
   filter: brightness(1.25);
 }
+
+@media only screen and (max-width: 600px) {
+  .githubLink {
+    width: 65px;
+  }
+}
+
+@media only screen and (min-width: 940px) {
+  .githubLink {
+    width: 70px;
+  }
+}
+
+@media only screen and (min-width: 1220px) {
+  .githubLink {
+    width: 80px;
+  }
+}
